--- a/styles/WritingPage.module.scss
+++ b/styles/WritingPage.module.scss
@@ -16,6 +16,10 @@
       background-color: rgba(0, 0, 0, 0.6);
       width: 100%;
       overflow-y: scroll;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
   
       @media screen and (min-width: 768px) { 
         margin-top: 280px;
@@ -45,6 +49,7 @@
         @media screen and (min-width: 768px) { 
           font-size: 4rem;
           padding: 0;
+          max-width: 960px;
         }
       }
   
