--- a/components/ProjectCard/ProjectCard.module.scss
+++ b/components/ProjectCard/ProjectCard.module.scss
@@ -32,7 +32,8 @@
     object-fit: cover;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
-    width: 100%;
+    min-width: 190px;
+    max-width: 190px;
     height: 114px;
     filter: grayscale(100);
     transition: all 0.5s ease;
