--- a/styles/ProjectPage.module.scss
+++ b/styles/ProjectPage.module.scss
@@ -72,7 +72,11 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    margin: 48px 0;
+    margin:0;
+
+    @media screen and (min-width: 768px) { 
+      margin: 48px 0;
+    }
 
     a {
       display: block;
@@ -108,6 +112,18 @@
   margin: auto;
   margin-bottom: 48px;
   border-radius: 8px;
+
+  iframe {
+    position: relative !important;
+    width: 100% !important;
+    min-width: 360px;
+    min-height: 120px;
+
+    @media screen and (min-width: 768px) { 
+      min-width: 640px;
+      min-height: 360px;
+    }
+  }
 }
 
 .wrapper {
