--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -1,8 +1,6 @@
 .container {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   margin-bottom: 48px;
+  width: 100%;
 }
 
 .main {
@@ -28,10 +26,17 @@
 }
 
 .grid {
-  margin: auto;
-  max-width: 80%;
+  max-width: 100%;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+
+  @media screen and (min-width: 768px) { 
+    max-width: 80%;
+    margin: auto;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
 }
