--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,10 @@
 html,
 body {
-  padding: 0;
+  width: 100%;
+  height: 100%;
   margin: 0;
+  padding: 0;
+  overflow-x: hidden; 
   font-family: "Lora", serif;
 }
 
@@ -59,8 +62,9 @@ h1 {
 }
 
 .bm-cross-button {
-  width: 60px;
-  height: 60px;
+  width: 60px !important;
+  height: 60px !important;
+  right: 4px !important;
 
   @media screen and (min-width: 768px) {
     display: none;
