--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -35,8 +35,8 @@
 }
 
 .canvas {
-  width: 85%;
-  height: 60vh;
+  width: 1200px;
+  height: 600px;
   margin: 40px auto auto auto;
 
   @media screen and (min-width: 768px) {
