--- a/styles/ProjectPage.module.scss
+++ b/styles/ProjectPage.module.scss
@@ -5,8 +5,8 @@
   align-items: center;
   width: 100%;
   overflow-y: initial;
-  
-  @media screen and (min-width: 768px) { 
+
+  @media screen and (min-width: 768px) {
     overflow-y: scroll;
   }
 
@@ -21,7 +21,7 @@
     justify-content: center;
     align-items: center;
 
-    @media screen and (min-width: 768px) { 
+    @media screen and (min-width: 768px) {
       margin-top: 280px;
     }
 
@@ -45,8 +45,8 @@
       overflow: hidden;
       text-overflow: ellipsis;
       max-width: 360px;
-      
-      @media screen and (min-width: 768px) { 
+
+      @media screen and (min-width: 768px) {
         max-width: 960px;
         font-size: 4rem;
         padding: 0;
@@ -72,9 +72,9 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    margin:0;
+    margin: 0;
 
-    @media screen and (min-width: 768px) { 
+    @media screen and (min-width: 768px) {
       margin: 48px 0;
     }
 
@@ -89,19 +89,19 @@
   &__gallery {
     width: 90%;
     margin: auto;
-    margin-top: 48px;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    gap: 48px;
 
     &--image {
       width: 280px;
       object-fit: cover;
       border: 1px solid white;
-      margin-bottom: 48px;
 
-      @media screen and (min-width: 768px) { 
+      @media screen and (min-width: 768px) {
         width: 360px;
+        height: 180px;
       }
     }
   }
@@ -119,7 +119,7 @@
     min-width: 360px;
     min-height: 120px;
 
-    @media screen and (min-width: 768px) { 
+    @media screen and (min-width: 768px) {
       min-width: 640px;
       min-height: 360px;
     }
@@ -128,9 +128,9 @@
 
 .wrapper {
   width: 100%;
-  background-color: rgba(0, 0, 0, .6);
+  background-color: rgba(0, 0, 0, 0.6);
 
-  @media screen and (min-width: 768px) { 
+  @media screen and (min-width: 768px) {
     background-size: cover;
     height: 100vh;
     background-position: center;
