Add Google Analytics Tag + sitemap & robots + minor tweaks'

--- a/styles/ProjectPage.module.scss
+++ b/styles/ProjectPage.module.scss
@@ -93,6 +93,7 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 48px;
+    margin-bottom: 48px;
 
     &--image {
       width: 280px;
