--- a/components/CardV1/CardV1.module.scss
+++ b/components/CardV1/CardV1.module.scss
@@ -1,8 +1,7 @@
-.projectCard {
+.card {
   border: 1px solid black;
   width: 192px;
   height: 192px;
-  margin: 24px;
   border-radius: 8px;
 
   p {
