--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,12 +1,17 @@
 .footer {
+  position: fixed;
+  bottom: 0;
   display: flex;
   flex-direction: column;
   margin: 0;
   margin-top: 24px;
+  background: #ffffff;
+  width: 100%;
+  border-top: 1px solid black;
 
   @media screen and (min-width: 768px) {
     flex-direction: row;
-    margin: 0 48px;
+    padding: 0 4rem;
   }
 
   &__rightSide {
