--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -1,13 +1,17 @@
 .navBar {
+  position: absolute;
+  background-color: white;
   display: flex;
   width: 100%;
   font-family: "Roboto", sans-serif;
   font-size: 24px;
   margin-top: -4px;
   padding-bottom: 80px;
+  height: 60px;
 
   @media screen and (min-width: 768px) {
-    padding-bottom: 120px;
+    border-bottom: 1px solid black;
+    padding-bottom: 0;
   }
 
   button {
@@ -34,9 +38,10 @@
   margin: auto;
   width: 100%;
   display: none;
-  justify-content: space-evenly;
+  justify-content: space-between;
   font-weight: 100;
   padding: 0;
+  padding: 0 4rem;
 
   svg {
     position: absolute;
