--- a/components/WritingCard/WritingCard.module.scss
+++ b/components/WritingCard/WritingCard.module.scss
@@ -9,6 +9,10 @@
   align-items: center;
   justify-content: center;
 
+  &:first-child {
+    border-top: none;
+  }
+
   @media screen and (min-width: 768px) {
     width: 960px;
     overflow-y: scroll;
