--- a/styles/ExperimentPage.module.scss
+++ b/styles/ExperimentPage.module.scss
@@ -1,98 +1,103 @@
 .wrapper {
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
 
-    @media screen and (min-width: 768px) {
-        background-size: cover;
-        height: 100vh;
-        background-position: center;
-    }
+  @media screen and (min-width: 768px) {
+    background-size: cover;
+    height: 100vh;
+    background-position: center;
+  }
 }
 
 .embed {
-    max-width: 960px;
-    margin: auto;
-    padding-bottom: 48px;
+  max-width: 960px;
+  margin: auto;
+  padding-bottom: 48px;
+  height: 100%;
 
-    &__container {
-        position: relative;
-        overflow: hidden;
-        width: 100%;
-        padding-top: 56.25%;
-    }
+  &__container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%;
+  }
 
-    iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-    }
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .project {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  overflow-y: scroll;
+
+  &__container {
+    margin-top: 0;
+    text-align: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.6);
     width: 100%;
     overflow-y: scroll;
+    margin-bottom: 48px;
+    padding-bottom: 48px;
+    padding: 128px 0;
 
-    &__container {
-        margin-top: 0;
-        text-align: center;
-        color: white;
-        background-color: rgba(0, 0, 0, 0.6);
-        width: 100%;
-        overflow-y: scroll;
-
-        @media screen and (min-width: 768px) {
-            margin-top: 280px;
-        }
-
-        a {
-            border-bottom: 1px solid white;
-        }
-
-        a:hover {
-            color: lightgrey;
-            border-bottom: 1px solid lightgrey;
-        }
-
-        h1 {
-            line-height: 1.15;
-            font-size: 4rem;
-            font-family: "Roboto", sans-serif;
-            padding: 0 24px 24px 24px;
-            border-bottom: 2px solid white;
-
-            @media screen and (min-width: 768px) {
-                padding: 0 0 24px 0;
-            }
-        }
-
-        p {
-            max-width: 960px;
-            margin: auto;
-            font-family: "Lora", serif;
-            text-align: justify;
-            margin-bottom: 48px;
-            padding: 0 24px;
-
-            @media screen and (min-width: 768px) {
-                text-align: left;
-                margin: auto;
-                margin-bottom: 48px;
-                padding: 0;
-            }
-        }
+    @media screen and (min-width: 768px) {
+      padding: 0;
+      margin-top: 280px;
     }
 
+    a {
+      border-bottom: 1px solid white;
+    }
+
+    a:hover {
+      color: lightgrey;
+      border-bottom: 1px solid lightgrey;
+    }
+
+    h1 {
+      line-height: 1.15;
+      font-size: 4rem;
+      font-family: "Roboto", sans-serif;
+      padding: 0 24px 24px 24px;
+      border-bottom: 2px solid white;
+
+      @media screen and (min-width: 768px) {
+        padding: 0 0 24px 0;
+      }
+    }
+
+    p {
+      max-width: 960px;
+      margin: auto;
+      font-family: "Lora", serif;
+      text-align: justify;
+      margin-bottom: 48px;
+      padding: 0 24px;
+
+      @media screen and (min-width: 768px) {
+        text-align: left;
+        margin: auto;
+        margin-bottom: 48px;
+        padding: 0;
+      }
+    }
+  }
+
   &__gallery {
-    width: 90%;
-    margin: auto;
+    width: 100%;
+    margin: 48px auto 0 auto;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
