--- a/styles/Lab.Module.scss
+++ b/styles/Lab.Module.scss
@@ -1,37 +1,50 @@
 .container {
-    padding: 0 0.5rem;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 80vh;
+  padding: 128px 0 224px 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+
+  @media screen and (min-width: 768px) { 
+    padding: 128px 0 48px 0;
+  }
 }
 
 .disclaimer {
-    text-align: center;
-    font-size: 12px;
-    margin-top: 128px;
+  text-align: center;
+  font-size: 12px;
+  margin-top: 128px;
 }
 
 .title {
-    margin-top: 240px;
-    display: flex;
-    line-height: 1.15;
-    font-size: 4rem;
-    align-items: center;
-    font-family: "Roboto", sans-serif;
+  margin-top: 240px;
+  display: flex;
+  line-height: 1.15;
+  font-size: 4rem;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
 
-    img {
-        width: 3rem;
-        height: 3rem;
-    }
+  img {
+    width: 3rem;
+    height: 3rem;
+  }
 }
 
 .grid {
-    max-width: 1080px;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 48px;
+
+  @media screen and (min-width: 768px) {
+    max-width: 100%;
+    padding: 0 4rem;
+    margin: auto;
+    flex-direction: row;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    margin: auto;
-    grid-gap: 0 36px;
+    justify-content: center;
+  }
 }
