--- a/styles/Music.module.scss
+++ b/styles/Music.module.scss
@@ -1,8 +1,11 @@
 .container {
-  padding: 0 0.5rem;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  padding: 128px 0 224px 0;
+  width: 100%;
+  height: 100%;
+
+  @media screen and (min-width: 768px) { 
+    padding: 128px 0 48px 0;
+  }
 }
 
 .title {
@@ -20,11 +23,20 @@
 }
 
 .grid {
-  max-width: 80%;
+  max-width: 100%;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
-  margin: auto;
-  grid-gap: 0 18px;
+  justify-content: center;
+  gap: 48px;
+
+  @media screen and (min-width: 768px) { 
+    max-width: 100%;
+    padding: 0 4rem;
+    margin: auto;
+    flex-direction: row;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
