--- a/styles/MusicPage.module.scss
+++ b/styles/MusicPage.module.scss
@@ -24,8 +24,10 @@
     background-color: rgba(0, 0, 0, 0.6);
     width: 100%;
     overflow-y: scroll;
+    padding: 128px 0;
 
     @media screen and (min-width: 768px) {
+      padding: 0;
       margin-top: 280px;
     }
 
