--- a/styles/PressPage.module.scss
+++ b/styles/PressPage.module.scss
@@ -1,43 +1,49 @@
 .container {
-    margin-bottom: 48px;
-    width: 100%;
-    min-height: 75vh;
+  padding: 128px 0 224px 0;
+  width: 70%;
+
+  @media screen and (min-width: 768px) { 
+    padding: 128px 0 48px 0;
+  }
 }
 
 .main {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .title {
-    margin-top: 240px;
-    display: flex;
-    line-height: 1.15;
-    font-size: 4rem;
-    align-items: center;
-    font-family: "Roboto", sans-serif;
+  margin-top: 240px;
+  display: flex;
+  line-height: 1.15;
+  font-size: 4rem;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
 
-    img {
-        width: 3rem;
-        height: 3rem;
-    }
+  img {
+    width: 3rem;
+    height: 3rem;
+  }
 }
 
 .grid {
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 48px;
 
-    @media screen and (min-width: 768px) {
-        max-width: 80%;
-        margin: auto;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-around;
-    }
+  @media screen and (min-width: 768px) {
+    max-width: 100%;
+    padding: 0 4rem;
+    margin: auto;
+    flex-direction: row;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
