--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -1,6 +1,11 @@
 .container {
-  margin-bottom: 48px;
+  padding: 128px 0 224px 0;
   width: 100%;
+  height: 100%;
+
+  @media screen and (min-width: 768px) { 
+    padding: 128px 0 48px 0;
+  }
 }
 
 .main {
@@ -9,6 +14,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100%;
 }
 
 .title {
@@ -31,12 +37,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 48px;
 
   @media screen and (min-width: 768px) { 
-    max-width: 80%;
+    max-width: 100%;
+    padding: 0 4rem;
     margin: auto;
     flex-direction: row;
+    display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
   }
 }
