--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,11 +1,15 @@
 html,
 body {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  margin: 0;
   padding: 0;
-  overflow-x: hidden; 
+  margin: 0;
+  overflow: auto;
   font-family: "Lora", serif;
+  overflow-x:hidden
 }
 
 a {
@@ -28,6 +32,7 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100%;
 }
 
 .video-column {
