--- a/components/WebGLSnippet/WebGLSnippet.module.scss
+++ b/components/WebGLSnippet/WebGLSnippet.module.scss
@@ -4,6 +4,12 @@
   margin: 0 auto auto auto;
 
   @media screen and (min-width: 768px) {
+    width: 1200px;
+    height: 600px;
+    margin-bottom: 96px;
+  }
+
+  @media screen and (min-width: 960px) {
     width: 100%;
     height: 580px;
     margin: 80px auto auto auto;
