--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -3,6 +3,10 @@
   padding: 128px 24px 256px 24px;
 
   @media screen and (min-width: 768px) { 
+    padding: 128px 48px;
+  }
+
+  @media screen and (min-width: 960px) { 
     padding: 128px 0 48px 0;
   }
 }
