--- a/styles/ExperimentPage.module.scss
+++ b/styles/ExperimentPage.module.scss
@@ -49,10 +49,14 @@
     width: 100%;
     overflow-y: scroll;
     margin-bottom: 48px;
-    padding-bottom: 48px;
     padding: 128px 0;
 
     @media screen and (min-width: 768px) {
+      padding: 128px 48px;
+      margin-top: 280px;
+    }
+
+    @media screen and (min-width: 960px) {
       padding: 0;
       margin-top: 280px;
     }
