--- a/styles/Music.module.scss
+++ b/styles/Music.module.scss
@@ -3,7 +3,11 @@
   width: 100%;
   height: 100%;
 
-  @media screen and (min-width: 768px) { 
+  @media screen and (min-width: 768px) {
+    padding: 128px 0;
+  }
+
+  @media screen and (min-width: 960px) {
     padding: 128px 0 48px 0;
   }
 }
@@ -30,7 +34,7 @@
   justify-content: center;
   gap: 48px;
 
-  @media screen and (min-width: 768px) { 
+  @media screen and (min-width: 768px) {
     max-width: 100%;
     padding: 0 4rem;
     margin: auto;
