--- a/styles/MusicPage.module.scss
+++ b/styles/MusicPage.module.scss
@@ -27,6 +27,11 @@
     padding: 128px 0;
 
     @media screen and (min-width: 768px) {
+      padding: 128px 48px;
+      margin-top: 280px;
+    }
+
+    @media screen and (min-width: 960px) {
       padding: 0;
       margin-top: 280px;
     }
