--- a/styles/PressPage.module.scss
+++ b/styles/PressPage.module.scss
@@ -3,6 +3,10 @@
   width: 70%;
 
   @media screen and (min-width: 768px) { 
+    padding: 128px 0;
+  }
+
+  @media screen and (min-width: 960px) { 
     padding: 128px 0 48px 0;
   }
 }
