--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -4,6 +4,10 @@
   height: 100%;
 
   @media screen and (min-width: 768px) { 
+    padding: 128px 0;
+  }
+
+  @media screen and (min-width: 960px) { 
     padding: 128px 0 48px 0;
   }
 }
