--- a/styles/WritingPage.module.scss
+++ b/styles/WritingPage.module.scss
@@ -23,6 +23,11 @@
     padding: 128px 0 176px 0;
 
     @media screen and (min-width: 768px) {
+      padding: 128px 48px;
+      margin-top: 280px;
+    }
+
+    @media screen and (min-width: 960px) {
       padding: 0;
       margin-top: 280px;
     }
@@ -40,7 +45,6 @@
       line-height: 1.15;
       font-size: 2.5rem;
       font-family: "Roboto", sans-serif;
-      padding-bottom: 24px;
       border-bottom: 2px solid white;
       padding: 0 24px 24px 24px;
       white-space: nowrap;
@@ -59,7 +63,6 @@
       max-width: 960px;
       margin: 0 48px;
       font-family: "Lora", serif;
-      text-align: left;
       margin-bottom: 48px;
       text-align: justify;
 
